add main include for wasabi targets to build cleanly

--- a/Makefile.am
+++ b/Makefile.am
@@ -394,3 +394,7 @@ clean-local:
 
 distclean-local:
 	-$(MAKE) -C codegen distclean
+
+ifneq ($(MAIN_DIR),)
+-include $(MAIN_DIR)/Makefile.common
+endif
